Message icon changed

--- a/Smsgateway/app/src/main/res/layout/activity_sms.xml
+++ b/Smsgateway/app/src/main/res/layout/activity_sms.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="25dp"
                 android:layout_marginTop="100dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/ic_icon_message" />
 
             <TextView
                 android:layout_width="fill_parent"
