--- a/AndroidWirelessConnection/app/src/main/res/layout/activity_main.xml
+++ b/AndroidWirelessConnection/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ajit123jain.androidwirelessconnection.MainActivity">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/Bluetooth"
+        android:id="@+id/btnBluetooth"
+        android:onClick="getBluetoothActivity"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/wifi"
+        android:id="@+id/btnWifi"
+        android:onClick="getWifiActivity"
+        android:layout_below="@+id/btnBluetooth"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/nfc"
+        android:id="@+id/btnNfc"
+        android:onClick="getNfcActivity"
+        android:layout_below="@+id/btnWifi"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/mobile_data"
+        android:id="@+id/btnMobileData"
+        android:onClick="getMobileDataActivity"
+        android:layout_below="@+id/btnNfc"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
