--- a/RecyclerView2/app/src/main/res/layout/single_image.xml
+++ b/RecyclerView2/app/src/main/res/layout/single_image.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:id="@+id/image"
         />
 </LinearLayout>
