--- a/Buyhatke2/app/src/main/res/values/styles.xml
+++ b/Buyhatke2/app/src/main/res/values/styles.xml
@@ -9,5 +9,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="CircularProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/background</item>
+    </style>
 
 </resources>
