--- a/Buyhatke2/app/src/main/res/layout/fragment_home.xml
+++ b/Buyhatke2/app/src/main/res/layout/fragment_home.xml
@@ -22,9 +22,9 @@
         android:layout_centerInParent="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="20dp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
-        android:text="Edit fragment_home.xml to change the appearance" />
+        android:text="Click on 3 dots to see the pagination " />
 
 </RelativeLayout>
